# pykeyset

./: .deny.toml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  LICENCE  LICENCE-MIT  MANIFEST.in  README.md  build.rs  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  build.yml  ci.yml  lint.yml  tests.yml
example/: example.cmdlist
keyset/: __init__.py  __main__.py  cmdlist.py  version.py
keyset/core/: __init__.py  font.py  fontgen.py  glyph.py  icons.py  kle.py  layout.py  profile.py
keyset/res/: __init__.py
keyset/res/fonts/: cherry.xml
keyset/res/icons/: ta-origins.xml
keyset/res/profiles/: cherry.toml  template.toml
keyset/utils/: config.py  error.py  tomlparser.py  types.py
keyset/utils/path/: __init__.py  arc_to_bezier.py
pykeyset/: __init__.py  __main__.py  cmdlist.py  logging.py
pykeyset/cmdlist/: __init__.py  config.py  logging.py
pykeyset/cmdlist/core/: ctx.py  font.py  icon.py  layout.py  profile.py  save.py
pykeyset/core/: __init__.py  font.py  fontgen.py  icon.py  icons.py  kle.py  layout.py  profile.py  save.py
pykeyset/core/font/: __init__.py  font.py  glyph.py  kerning.py  load.py
pykeyset/core/icon/: __init__.py  icon.py  icon_set.py  load.py
pykeyset/core/profile/: __init__.py  load.py  profile.py  types.py
pykeyset/res/: __init__.py
pykeyset/res/fonts/: cherry.xml
pykeyset/res/profiles/: cherry.toml
pykeyset/resources/: __init__.py
pykeyset/resources/fonts/: cherry.xml
pykeyset/resources/icons/: cherry.xml
pykeyset/resources/profiles/: cherry.toml  kat.toml
pykeyset/utils/: __init__.py  config.py  error.py  logging.py  tomlparser.py  types.py
pykeyset/utils/path/: __init__.py  arc_to_bezier.py  path.py  segment.py
src/: __init__.py  __main__.py  cmdlist.py  color.rs  drawing.rs  font.rs  layout.rs  lib.rs  profile.rs  version.py  version.rs
src/command/: __init__.py  load_font.py
src/commands/: __init__.py
src/core/: __init__.py  drawing.rs  font.py  font.rs  fontgen.py  fontgen.rs  glyph.py  icon.rs  kle.rs  layout.rs  mod.rs  profile.rs  save.rs
src/fonts/: __init__.py
src/utils/: __init__.py  config.py  config.rs  error.py  file.rs  mod.rs  output.py  types.rs
src/utils/path/: __init__.py
src/version/: mod.rs
tests/: conftest.py  test_cmdlist.py  test_color.py  test_example.py  test_file.py  test_pykeyset.py  test_resources.py  test_version.py
tests/core/font/: test_font.py  test_kern.py  test_load_font.py
tests/core/icon/: test_icon_set.py  test_load_icons.py
tests/core/profile/: test_load_profile.py  test_profile.py  test_profile_types.py
tests/utils/: test_arc_to_bezier.py  test_config.py  test_error.py  test_logging.py  test_path.py  test_tomlparser.py  test_types.py
