[package]
name = "pykeyset"
version = "0.1.1"
authors = ["Lucas Jansen"]
edition = "2021"
rust-version = "1.82"
repository = "https://github.com/staticintlucas/keyset-rs"
license = "MIT OR Apache-2.0"
publish = false # Don't publish this to crates.io

[lib]
crate-type = ["cdylib"]

[features]
experimental-inspect = ["pyo3/experimental-inspect"]
test = [] # Enables some plumbing necessary for our tests

[dependencies]
const_format = "0.2"
csscolorparser = "0.6"
indoc = "2.0"
keyset = { git = "https://github.com/staticintlucas/keyset-rs", rev = "a383c8e89779822d47b5b4543c2248889b8fb13c" }
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py38"] }
shadow-rs = { version = "1.0", default-features = false }

[build-dependencies]
cargo-lock = "10.0"
indoc = "2.0"
pyo3-build-config = { version = "0.26", features = ["resolve-config"] }
shadow-rs = "1.0"
