[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "pykeyset"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typer ~= 0.7.0",
    "click ~= 8.1",
    "rich ~= 13.0",
    "importlib_resources ~= 1.3; python_version < '3.9'",
]

[project.scripts]
pykeyset = "pykeyset.__main__:app"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py37", "pyo3/generate-import-lib"]
module-name = "pykeyset._impl"
